fix(tabs): align tabs with rti/atfocus controller implementation

--- a/elements/rh-tabs/rh-tabs.css
+++ b/elements/rh-tabs/rh-tabs.css
@@ -52,6 +52,11 @@ button:before {
   border-style: solid;
 }
 
+#tablist {
+  display: contents;
+}
+
+
 @container (min-width: 567px) {
   [part="tabs-container"] {
     --_tab-max-width: none;
